--- a/index.html
+++ b/index.html
@@ -9,8 +9,16 @@
     <title>Demo</title>
     <link href="img/demo.ico" rel="icon" type="image/x-icon" />
     <link href="img/demo.ico" rel="shortcut icon" type="image/x-icon" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />    
+    <link href="css/openfonts-roboto.css" rel="stylesheet" />
+    <link href="css/material-components-web.min.css" rel="stylesheet" />
+    <link href="css/app.css" rel="stylesheet" />
 </head>
-<body>
+<body class="mdc-typography">
     demo
+    <script src="js/libs/material-components-web.min.js"></script>
+    <script src="js/libs/knockout-latest.js"></script>
+    <script src="js/libs/moment-with-locales.min.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
