--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
     <link href="css/app.css" rel="stylesheet" />
 </head>
 <body class="mdc-typography">
-    demo
+    <ko-footer></ko-footer>
+    <ko-copyright></ko-copyright>
     <script src="js/libs/material-components-web.min.js"></script>
     <script src="js/libs/knockout-latest.js"></script>
     <script src="js/libs/moment-with-locales.min.js"></script>
+    <script src="js/loader.js"></script>
     <script src="js/app.js"></script>
 </body>
 </html>
