--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <script src="js/libs/material-components-web.min.js"></script>
     <script src="js/libs/knockout-latest.js"></script>
     <script src="js/libs/moment-with-locales.min.js"></script>
+    <script src="js/fetch.js"></script>
     <script src="js/loader.js"></script>
     <script src="js/app.js"></script>
 </body>
