--- a/content/footer/_template.html
+++ b/content/footer/_template.html
@@ -2,9 +2,8 @@
     <div class="mdc-layout-grid__inner container">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
             <div class="mdc-layout-grid__inner">
-                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
-                    TODO
-                </div>
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone"
+                     data-bind="html: content"></div>
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
                     TODO                    
                 </div>
