--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
     <script src="js/libs/material-components-web.min.js"></script>
     <script src="js/libs/knockout-latest.js"></script>
     <script src="js/libs/moment-with-locales.min.js"></script>
+    <script src="js/libs/js-yaml.min.js"></script>
+    <script src="js/front-matter.js"></script>
     <script src="js/block.js"></script>
     <script src="js/app.js"></script>
 </body>
