--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link href="css/copyright.css" rel="stylesheet" />
 </head>
 <body class="mdc-typography">
+    <app-block params="id: 'footer-index'"></app-block>
     <app-block params="id: 'copyright', classes: 'copyright,mdc-layout-grid'.split(',')">
         <div class="mdc-layout-grid__inner container">
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12" data-bind="html: content"></div>
