--- a/index.html
+++ b/index.html
@@ -14,9 +14,19 @@
     <link href="css/material-components-web.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
     <link href="css/copyright.css" rel="stylesheet" />
+    <link href="css/footer.css" rel="stylesheet" />
 </head>
 <body class="mdc-typography">
-    <app-block params="id: 'footer-index'"></app-block>
+    <app-block params="id: 'footer-index', classes: 'footer,mdc-layout-grid'.split(',')">
+        <div class="mdc-layout-grid__inner container">
+            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+                <div class="mdc-layout-grid__inner" data-bind="foreach: Object.entries(content())">
+                    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone"
+                         data-bind="html: $data[1]"></div>
+                </div>
+            </div>
+        </div>
+    </app-block>
     <app-block params="id: 'copyright', classes: 'copyright,mdc-layout-grid'.split(',')">
         <div class="mdc-layout-grid__inner container">
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12" data-bind="html: content"></div>
