--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <title>Demo</title>
     <link href="img/demo.ico" rel="icon" type="image/x-icon" />
     <link href="img/demo.ico" rel="shortcut icon" type="image/x-icon" />
+    <link href="https://fonts.googleapis.com" rel="preconnect" />
+    <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />    
     <link href="css/openfonts-roboto.css" rel="stylesheet" />
     <link href="css/material-components-web.min.css" rel="stylesheet" />
@@ -16,12 +19,21 @@
     <link href="css/copyright.css" rel="stylesheet" />
     <link href="css/footer.css" rel="stylesheet" />
     <link href="css/menu.css" rel="stylesheet" />
+    <link href="css/main.css" rel="stylesheet" />
 </head>
 <body class="mdc-typography">
     <app-block params="id: 'menu', classes: 'menu,mdc-top-app-bar,mdc-top-app-bar--fixed'.split(',')">
         <div class="mdc-top-app-bar__row container">
             <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-start"
                      data-bind="html: content"></section>
+        </div>
+    </app-block>
+    <app-block params="id: 'main', classes: 'main,mdc-top-app-bar--fixed-adjust'.split(',')">
+        <div class="main__header mdc-layout-grid">
+            <section class="mdc-layout-grid__inner container">
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone"
+                     data-bind="html: content"></div>
+            </section>
         </div>
     </app-block>
     <app-block params="id: 'footer-index', classes: 'footer,mdc-layout-grid'.split(',')">
